Core dumped with the carousel
Hi,
When scrolling on the carousel from the demo, sometimes the application crash. Here is the backtrace :
Thread 1 "adwaita-1-demo" received signal SIGSEGV, Segmentation fault.
0x00007ffff7edea75 in scroll_animation_value_cb (value=0.1262771840000001, self=0x555555a79b30) at ../src/adw-carousel.c:347
347 double position = adw_lerp (self->animation_source_position,
(gdb) bt
#0 0x00007ffff7edea75 in scroll_animation_value_cb (value=0.1262771840000001, self=0x555555a79b30) at ../src/adw-carousel.c:347
#1 0x00007ffff7edb6a9 in set_value (value=<optimized out>, self=0x555555eeef20) at ../src/adw-animation.c:42
#2 tick_cb (widget=<optimized out>, frame_clock=<optimized out>, self=0x555555eeef20) at ../src/adw-animation.c:78
#3 0x00007ffff75bd776 in () at /lib/x86_64-linux-gnu/libgtk-4.so.1
#4 0x00007ffff7c91bcf in g_closure_invoke () at /lib/x86_64-linux-gnu/libgobject-2.0.so.0
#5 0x00007ffff7cbb81b in () at /lib/x86_64-linux-gnu/libgobject-2.0.so.0
#6 0x00007ffff7caf638 in g_signal_emit_valist () at /lib/x86_64-linux-gnu/libgobject-2.0.so.0
#7 0x00007ffff7caf893 in g_signal_emit () at /lib/x86_64-linux-gnu/libgobject-2.0.so.0
#8 0x00007ffff76dc27a in () at /lib/x86_64-linux-gnu/libgtk-4.so.1
#9 0x00007ffff7b9ded8 in () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#10 0x00007ffff7b9d7ef in g_main_context_dispatch () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#11 0x00007ffff7bf0d28 in () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#12 0x00007ffff7b9b023 in g_main_context_iteration () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#13 0x00007ffff7db527d in g_application_run () at /lib/x86_64-linux-gnu/libgio-2.0.so.0
#14 0x0000555555559581 in main (argc=1, argv=0x7fffffffdf98) at ../examples/adwaita-demo.c:61
(gdb)
Looking a little it seems that animation_target_child
for some reason can be NULL
.
On Ubuntu 21.04 (Hirsute Hippo) with libadwaita from master.
Thanks !
Edited by Krifa75