carousel: Fix crash with 2 overlapping animations

If we start an animation while one is already running, we first set the
state for the new animation, then stop the old animation resetting the same
state, then start the new animation with the empty state. We should stop it
first, then set the state.

Fixes https://gitlab.gnome.org/GNOME/libadwaita/-/issues/185