src/adw-carousel.c
@@ -374,11 +374,11 @@ scroll_to (AdwCarousel *self,
            GtkWidget   *widget,
            gint64       duration)
 {
-  self->animation_source_position = self->position;
-  self->animation_target_child = find_child_info (self, widget);
-
   if (self->animation)
     adw_animation_stop (self->animation);
+
+  self->animation_source_position = self->position;
+  self->animation_target_child = find_child_info (self, widget);
 
   self->animation =
     adw_animation_new (GTK_WIDGET (self), 0, 1, duration,
